--- a/TurismoReal/website/templates/turismoreal/index.html
+++ b/TurismoReal/website/templates/turismoreal/index.html
@@ -1,13 +1,6 @@
-<!DOCTYPE html>
-<html>
+{%extends "turismoreal/padre.html"%}
+{% load static %}
 
-<head lang="es">
-    <title>{%block title%}{%endblock%}</title>
-</head>
-<body>
-
-<h1>This is a Heading</h1>
-<p>This is a paragraph.</p>
-
-</body>
-</html>
+{%block title %}Turismo Real{%endblock%}
+{%block content%}
+{%endblock%}
