--- a/TurismoReal/website/templates/turismoreal/welcome.html
+++ b/TurismoReal/website/templates/turismoreal/welcome.html
@@ -6,4 +6,7 @@
 <h1>Bienvenido</h1>
 <h5>{{ user.nombre_cli }} {{user.apaterno_cli}}</h5>
 </div>
+<div style="margin:30px; text-align: center;">
+    <h1>En construcción....</h1>
+</div>
 {% endblock %}  
