--- a/TurismoReal/website/templates/turismoreal/padre.html
+++ b/TurismoReal/website/templates/turismoreal/padre.html
@@ -9,7 +9,8 @@
     <title>{%block title%}{%endblock%}</title>
     {% load static %}
     <link href="{% static 'assets/dist/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{%  static 'css/header.css' %}" rel="stylesheet">
+    <link href="{%  static 'css/style.css' %}" rel="stylesheet">
+  
 </head>
 <div class="container">
   <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
