--- a/TurismoReal/website/templates/turismoreal/index.html
+++ b/TurismoReal/website/templates/turismoreal/index.html
@@ -3,24 +3,36 @@
 
 {%block title %}Turismo Real{%endblock%}
 {%block content%}
-<div id="carouselExampleControls" class="carousel slide centrado" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item">
-        <img src="{%  static '/img/depto1.jpg' %} " class="imagen" alt="...">
-      </div>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+      <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+      <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="{%  static '/img/depto2.jpg' %} "  class="imagen" alt="...">
+          <img class="d-block w-100" src="{%  static '/img/depto2.jpg' %}" class="imagen" alt="First slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>My Caption Title (1st Image)</h5>
+              <p>The whole caption will only show up if the screen is at least medium size.</p>
+          </div>
       </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
+      <div class="carousel-item">
+          <img class="d-block w-100" src="{%  static '/img/depto3.jpg' %}" class="imagen" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+          <img class="d-block w-100" src="{%  static '/img/depto4.jpg' %}" class="imagen" alt="Third slide">
+      </div>
   </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+  </a>
+</div>
   <section >
     <div class="container" style="margin: 20px auto ;">
         <div class="row align-items-center justify-content-around flex-row-reverse">
